--- a/hbk-ai-test/sidepanel/index.html
+++ b/hbk-ai-test/sidepanel/index.html
@@ -5,17 +5,25 @@
     <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
-    <h1>텍스트 입력</h1>
-    <textarea
-      id="user-input"
-      placeholder="여기에 텍스트를 입력하세요..."
-      cols="30"
-      rows="5"
-    ></textarea>
-    <button id="submit-button" class="primary">제출</button>
-    <div id="response" class="text" hidden></div>
-    <div id="loading" class="text" hidden><span class="blink">...</span></div>
-    <div id="error" class="text" hidden></div>
-    <script src="../dist/sidepanel.bundle.js" type="module"></script>
+    <h1>이미지 분석</h1>
+    
+    <!-- 버튼 영역 -->
+    <div class="button-container">
+      <button id="capture-button" class="primary">새로 캡처하기</button>
+      <button id="analyze-button" class="primary">분석하기</button>
+    </div>
+
+    <!-- 캡처된 이미지 표시 영역 -->
+    <div id="imageContainer"></div>
+
+    <!-- 분석 결과 표시 영역 -->
+    <div class="analysis-container">
+      <div id="loading" class="text" hidden><span class="blink">분석 중...</span></div>
+      <div id="error" class="text error-message" hidden></div>
+      <div id="analysisResult" class="analysis-result" hidden></div>
+    </div>
+    
+    <script src="../dist/capture.bundle.js"></script>
+    <script src="../dist/analyze.bundle.js"></script>
   </body>
 </html>
