--- a/capture-test/sidepanel/index.html
+++ b/capture-test/sidepanel/index.html
@@ -14,10 +14,10 @@
     <div class="mainContainer">
       <!-- 방금 캡쳐한 이미지 -->
       <div class="nowCapturedImage noImage">
-        <!-- <img
-        src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-        alt="방금 캡쳐한 이미지"
-      /> -->
+        <img
+          src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+          alt="방금 캡쳐한 이미지"
+        />
         <button type="button">
           <img src="./images/x.svg" alt="delete icon" />
         </button>
@@ -71,6 +71,14 @@
               src="https://www.ilovepc.co.kr/news/photo/202201/42234_99311_126.jpg"
               alt="검색결과1 이미지"
             />
+            <a
+              class="itemInfo"
+              href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+              target="_blank"
+            >
+              <h3>상품이름</h3>
+              <div>상품파는 사이트 (있으면 추가)</div>
+            </a>
           </li>
         </ul>
 
@@ -78,7 +86,7 @@
         <div class="relatedImageList"></div>
 
         <!-- 내가 캡쳐한 목록 리스트 ? -->
-        <ul class="capturedImageList"></ul>
+        <!-- <ul class="capturedImageList"></ul> -->
       </div>
     </div>
     <script src="../lib/html2canvas.min.js"></script>
