--- a/hbk-ai-test/sidepanel/index.html
+++ b/hbk-ai-test/sidepanel/index.html
@@ -1,29 +1,97 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <h1>이미지 분석</h1>
-    
-    <!-- 버튼 영역 -->
-    <div class="button-container">
-      <button id="capture-button" class="primary">새로 캡처하기</button>
+    <div class="mainContainer">
+      <!-- 방금 캡쳐한 이미지 -->
+      <div id="nowCapturedImage" class="noImage"></div>
+      <!-- 캡쳐버튼 -->
+      <button id="captureBtn" type="button">
+        <img src="../images/screenshot.svg" alt="screenshot icon" />
+        take a screenshot
+      </button>
       <button id="analyze-button" class="primary">분석하기</button>
-    </div>
+      <!-- 검색 결과 및 탭 -->
+      <div class="searchResult">
+        <div role="tablist">
+          <button
+            type="button"
+            id="relatedImgButton"
+            role="tab"
+            onclick="clickTab(event)"
+            class="selectedTab"
+          >
+            Related Image
+          </button>
+          <button
+            type="button"
+            id="recommendCombinationButton"
+            role="tab"
+            onclick="clickTab(event)"
+          >
+            Recommend Commbination
+          </button>
+        </div>
 
-    <!-- 캡처된 이미지 표시 영역 -->
-    <div id="imageContainer"></div>
+        <!-- 이미지 검색 결과 리스트 -->
+        <!-- <ul class="searchedImageList">
+          <li role="button" id="related0">
+            <img
+              src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+              alt="검색결과0 이미지"
+            />
+            <a
+              class="itemInfo"
+              href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+              target="_blank"
+            >
+              <h3>상품이름</h3>
+            </a>
+          </li>
+          <li role="button" id="related1">
+            <img
+              src="https://www.ilovepc.co.kr/news/photo/202201/42234_99311_126.jpg"
+              alt="검색결과1 이미지"
+            />
+            <a
+              class="itemInfo"
+              href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+              target="_blank"
+            >
+              <h3>상품이름</h3>
+              <div>상품파는 사이트 (있으면 추가)</div>
+            </a>
+          </li>
+        </ul> -->
+
+        <!-- 추천 조합 응답 -->
+        <div id="relatedCombinationList" hidden></div>
+      </div>
+    </div>
+    <!-- ----- -->
+
+    <!-- 버튼 영역 -->
+
+    <!-- <button id="analyze-button" class="primary">분석하기</button> -->
 
     <!-- 분석 결과 표시 영역 -->
     <div class="analysis-container">
       <div id="loading" class="text" hidden><span class="blink">분석 중...</span></div>
       <div id="error" class="text error-message" hidden></div>
-      <div id="analysisResult" class="analysis-result" hidden></div>
+      <!-- <div id="analysisResult" class="analysis-result" hidden></div> -->
     </div>
-    
+
     <script src="../dist/capture.bundle.js"></script>
     <script src="../dist/analyze.bundle.js"></script>
+    <script src="../dist/buttons.bundle.js"></script>
   </body>
 </html>
