[수정] css윗단에 올리기

--- a/ai-capture-real/sidepanel/index.html
+++ b/ai-capture-real/sidepanel/index.html
@@ -79,15 +79,12 @@
     </div>
     <!-- ----- -->
 
-    <!-- 버튼 영역 -->
-
-    <!-- <button id="analyze-button" class="primary">분석하기</button> -->
-
     <!-- 분석 결과 표시 영역 -->
     <div class="analysis-container">
-      <div id="loading" class="text" hidden><span class="blink">분석 중...</span></div>
+      <div id="loading" class="text" hidden>
+        <span class="blink">분석 중...</span>
+      </div>
       <div id="error" class="text error-message" hidden></div>
-      <!-- <div id="analysisResult" class="analysis-result" hidden></div> -->
     </div>
 
     <script src="../dist/capture.bundle.js"></script>
