[수정] 캡쳐로직 수정중..

--- a/ai-capture-real/sidepanel/index.html
+++ b/ai-capture-real/sidepanel/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div class="mainContainer">
+      <div id="nowCapturedFullImage"></div>
+
       <!-- 방금 캡쳐한 이미지 -->
       <div id="nowCapturedImage" class="noImage"></div>
       <!-- 캡쳐버튼 -->
