[수정]window에서 작업

--- a/ai-capture-real/sidepanel/index.html
+++ b/ai-capture-real/sidepanel/index.html
@@ -88,7 +88,7 @@
     </div>
 
     <script src="../dist/capture.bundle.js"></script>
-    <script src="../dist/analyze.bundle.js"></script>
+    <script src="../dist/combination.bundle.js"></script>
     <script src="../dist/buttons.bundle.js"></script>
   </body>
 </html>
