[수정] 작업 중

--- a/capture-test/sidepanel/index.html
+++ b/capture-test/sidepanel/index.html
@@ -33,7 +33,7 @@
         <div role="tablist">
           <button
             type="button"
-            id="relatedImgButton"
+            id="searchImgButton"
             role="tab"
             onclick="clickTab(event)"
             class="selectedTab"
