--- a/ai-capture-real/sidepanel/index.html
+++ b/ai-capture-real/sidepanel/index.html
@@ -19,62 +19,103 @@
         <img src="../images/screenshot.svg" alt="screenshot icon" />
         take a screenshot
       </button>
-      <button id="analyze-button" class="primary">분석하기</button>
       <!-- 검색 결과 및 탭 -->
       <div class="searchResult">
         <div role="tablist">
-          <button
-            type="button"
-            id="relatedImgButton"
-            role="tab"
-            onclick="clickTab(event)"
-            class="selectedTab"
-          >
+          <button type="button" id="searchImgButton" role="tab" class="selectedTab">
             Related Image
           </button>
-          <button
-            type="button"
-            id="recommendCombinationButton"
-            role="tab"
-            onclick="clickTab(event)"
-          >
+          <button type="button" id="recommendCombinationButton" role="tab">
             Recommend Commbination
           </button>
         </div>
+        <!-- 하단 영역 -->
+        <div class="innerContent">
+          <!-- 이미지 검색 결과 리스트 -->
+          <ul class="searchedImageList">
+            <li role="button" id="related0">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+                alt="검색결과0 이미지"
+              />
+              <a
+                class="itemInfo"
+                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+                target="_blank"
+              >
+                <h3>상품이름</h3>
+              </a>
+            </li>
+            <li role="button" id="related0">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+                alt="검색결과0 이미지"
+              />
+              <a
+                class="itemInfo"
+                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+                target="_blank"
+              >
+                <h3>상품이름</h3>
+              </a>
+            </li>
+            <li role="button" id="related0">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+                alt="검색결과0 이미지"
+              />
+              <a
+                class="itemInfo"
+                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+                target="_blank"
+              >
+                <h3>상품이름</h3>
+              </a>
+            </li>
+            <li role="button" id="related0">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+                alt="검색결과0 이미지"
+              />
+              <a
+                class="itemInfo"
+                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+                target="_blank"
+              >
+                <h3>상품이름</h3>
+              </a>
+            </li>
+            <li role="button" id="related0">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+                alt="검색결과0 이미지"
+              />
+              <a
+                class="itemInfo"
+                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+                target="_blank"
+              >
+                <h3>상품이름</h3>
+              </a>
+            </li>
+            <li role="button" id="related0">
+              <img
+                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
+                alt="검색결과0 이미지"
+              />
+              <a
+                class="itemInfo"
+                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
+                target="_blank"
+              >
+                <h3>상품이름</h3>
+              </a>
+            </li>
+          </ul>
 
-        <!-- 이미지 검색 결과 리스트 -->
-        <!-- <ul class="searchedImageList">
-          <li role="button" id="related0">
-            <img
-              src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-              alt="검색결과0 이미지"
-            />
-            <a
-              class="itemInfo"
-              href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-              target="_blank"
-            >
-              <h3>상품이름</h3>
-            </a>
-          </li>
-          <li role="button" id="related1">
-            <img
-              src="https://www.ilovepc.co.kr/news/photo/202201/42234_99311_126.jpg"
-              alt="검색결과1 이미지"
-            />
-            <a
-              class="itemInfo"
-              href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-              target="_blank"
-            >
-              <h3>상품이름</h3>
-              <div>상품파는 사이트 (있으면 추가)</div>
-            </a>
-          </li>
-        </ul> -->
-
-        <!-- 추천 조합 응답 -->
-        <div id="relatedCombinationList" hidden></div>
+          <!-- 추천 조합 응답 -->
+          <div class="relatedCombinationList"></div>
+        </div>
       </div>
     </div>
     <!-- ----- -->
