[추가] 로딩 스켈레톤 추가

--- a/ai-capture-real/sidepanel/index.html
+++ b/ai-capture-real/sidepanel/index.html
@@ -32,104 +32,15 @@
         <!-- 하단 영역 -->
         <div class="innerContent">
           <!-- 이미지 검색 결과 리스트 -->
-          <ul class="searchedImageList">
-            <li role="button" id="related0">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-                alt="검색결과0 이미지"
-              />
-              <a
-                class="itemInfo"
-                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-                target="_blank"
-              >
-                <h3>상품이름</h3>
-              </a>
-            </li>
-            <li role="button" id="related0">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-                alt="검색결과0 이미지"
-              />
-              <a
-                class="itemInfo"
-                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-                target="_blank"
-              >
-                <h3>상품이름</h3>
-              </a>
-            </li>
-            <li role="button" id="related0">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-                alt="검색결과0 이미지"
-              />
-              <a
-                class="itemInfo"
-                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-                target="_blank"
-              >
-                <h3>상품이름</h3>
-              </a>
-            </li>
-            <li role="button" id="related0">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-                alt="검색결과0 이미지"
-              />
-              <a
-                class="itemInfo"
-                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-                target="_blank"
-              >
-                <h3>상품이름</h3>
-              </a>
-            </li>
-            <li role="button" id="related0">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-                alt="검색결과0 이미지"
-              />
-              <a
-                class="itemInfo"
-                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-                target="_blank"
-              >
-                <h3>상품이름</h3>
-              </a>
-            </li>
-            <li role="button" id="related0">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/03/18/05/51/mac-4942769_1280.png"
-                alt="검색결과0 이미지"
-              />
-              <a
-                class="itemInfo"
-                href="https://www.ilovepc.co.kr/news/articleView.html?idxno=42234"
-                target="_blank"
-              >
-                <h3>상품이름</h3>
-              </a>
-            </li>
-          </ul>
+          <ul class="searchedImageList"></ul>
 
           <!-- 추천 조합 응답 -->
           <div class="relatedCombinationList"></div>
         </div>
       </div>
     </div>
-    <!-- ----- -->
-
-    <!-- 분석 결과 표시 영역 -->
-    <div class="analysis-container">
-      <div id="loading" class="text" hidden>
-        <span class="blink">분석 중...</span>
-      </div>
-      <div id="error" class="text error-message" hidden></div>
-    </div>
 
     <script src="../dist/capture.bundle.js"></script>
-    <script src="../dist/combination.bundle.js"></script>
-    <script src="../dist/buttons.bundle.js"></script>
+    <script src="../dist/clickTabs.bundle.js"></script>
   </body>
 </html>
